--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <link rel="stylesheet" href="./src/css/styles.css" />
     <script defer type="module" src="./main.js"></script>
@@ -42,6 +43,7 @@
         <div class="grid-container">
             <section class="main-content" id="main-content">
                 <h1 class="content-title">Note App</h1>
+                <form-add-note></form-add-note> 
                 <div class="note-list" id="note-list"></div>
             </section>
             <section class="my-profile" id="my-profile">
