done for animatioan loading, but there is bug at fitur edit in notes list

--- a/index.html
+++ b/index.html
@@ -54,29 +54,29 @@
           <h2 class="content-title">Notes Archived</h2>
           <div class="note-archive" id="note-archive"></div>
         </section>
-        <div
-          class="fetch-page-loading"
-          id="fetch-page-loading"
-          style="display: block; text-align: center"
-        >
-          <div class="loading-circle" id="loading-circle"></div>
-          <h3 class="loader-text-container">
-            <span class="loader-span">L</span>
-            <span class="loader-span">O</span>
-            <span class="loader-span">A</span>
-            <span class="loader-span">D</span>
-            <span class="loader-span">I</span>
-            <span class="loader-span">N</span>
-            <span class="loader-span">G</span>
-            <span class="loader-span">&nbsp;</span>
-            <span class="loader-span">N</span>
-            <span class="loader-span">O</span>
-            <span class="loader-span">T</span>
-            <span class="loader-span">E</span>
-            <span class="loader-span">S</span>
-          </h3>
-        </div>
         <section class="my-profile" id="my-profile"></section>
+      </div>
+      <div
+        class="fetch-page-loading"
+        id="fetch-page-loading"
+        style=" text-align: center"
+      >
+        <div class="loading-circle" id="loading-circle"></div>
+        <h3 class="loader-text-container">
+          <span class="loader-span">L</span>
+          <span class="loader-span">O</span>
+          <span class="loader-span">A</span>
+          <span class="loader-span">D</span>
+          <span class="loader-span">I</span>
+          <span class="loader-span">N</span>
+          <span class="loader-span">G</span>
+          <span class="loader-span">&nbsp;</span>
+          <span class="loader-span">N</span>
+          <span class="loader-span">O</span>
+          <span class="loader-span">T</span>
+          <span class="loader-span">E</span>
+          <span class="loader-span">S</span>
+        </h3>
       </div>
     </main>
     <footer>
